--- a/index.htm
+++ b/index.htm
@@ -2,11 +2,12 @@
 <html>
 <body>
 <body style="background-color:LightGrey;">
+<h1 style="border: 2px DodgerBlue;">
 <p>I am Yashin Kishoon</p>
 <p>
-<img src="profilepic2.png" alt="Yash" style="width:500px;height:600px;">
+<img src="profilepic2.png" alt="Yash" style="width:100px;height:100px;">
 </p>
-
+</h1>
 <p>RMIT student number: S3824185</p>
 <p>Email address S3824185@student.rmit.edu.au</p>
 
