updated index file

--- a/index.htm
+++ b/index.htm
@@ -2,27 +2,32 @@
 <html>
 <body>
 <body style="background-color:LightGrey;">
-<p>I am Yashin Kishoon</p>
 <p>
+<h3 style="border:2px solid DodgerBlue;"> Hello I am Yash Kishoon</h3>
+</p>
 <img src="profilepic2.png" alt="Yash" style="width:100px;height:100px;">
 </p>
-
 <p>RMIT student number: S3824185</p>
 <p>Email address S3824185@student.rmit.edu.au</p>
+
 <p>My tertiary education consists of an A+ Support certificate, Diploma in Systems Technology (Spherion Education 2005), ITIL Foundations V3 and ITIL OSA certification. I have excellent written and communication skills.</p>
 My hobbies are camping and fishing with the family. I also do tend to watch the really important Manchester United soccer matches whenever time permits.
-
+<p>
 <h3>A bit about me</h3>
+</p>
 <ul>
 <li>What is my interest in IT?</li> 
 <li>When did my interest in IT start?</li>
-<li>Was there a particular event or person that sparked my interest?</li> 	
-</ul>Outline my IT experience
-Why did I choose to come to RMIT?
-What do I expect to learn during your studies?
+<li>Was there a particular event or person that sparked my interest?</li>
+<li> A brief outline of my IT experience</li>
+</ul>
 <p>My interest in technology sparked over 20 yrs. ago when there was a lot of talk about the Y2K bug and speculation that computers were going to crash all over the world. I did a bit research and saw that there was a lot of opportunity along with the mystery about this bug and computers that excited me. I am truly fascinated with how technology has evolved over the past 20 years and look forward to an exciting technology advanced future ahead. </p>
 <p>I embarked on an A+ Support certificate course along with completing a Diploma in Systems Technology 15 years ago as a stepping stone into the industry. </p>
 <p>I worked for Cisco Systems for about 2 years in a Service Sales role. I then moved to a large financial institution and have been working within Service Management Operations and Support roles for the past 12 years. </p>
+<ul>
+<li>Why did I choose to come to RMIT?</li> 
+<li>What do I expect to learn during my studies?</li>
+</ul>
 <p>Studying towards a degree is very important to me both personally and career wise. I chose RMIT because I needed a reputable Tertiary Institution which gave me the flexibility to study online. I found that RMIT has really good feedback from students. I also noted that QS ratings for RMIT in Australia and globally were really good </p>
 
 <a href="https://www.rmit.edu.au/about/our-education/reputation-and-rankings/reputation-and-rankings"> RMIT QS Ratings</a> </p>
@@ -32,22 +37,22 @@ What do I expect to learn during your studies?
 <h3> My Ideal Job:</h3>
 
 <h4><a href="https://www.seek.com.au/job/40429621?tracking=TMC-SAU-eDM-SharedJob-13246"> Service Management Consultant- Infrastructure- Major Bank</a> </p> </h4>
-
  
-<p>The ideal job is for a Service Management Consultant with a strong background in Service Delivery Management and Governance skills required for overseeing Infrastructure for a large financial institution. </p>
-<p>This role appeals to me because I have some of the relevant key skills and experience been sought within in a large scale operating environment.</p>
+ 
+<p>My ideal job is a Service Management Consultant. This requires a strong background in Service Delivery Management and Governance skills on overseeing Infrastructure for a large financial institution. </p>
+<p>This role appeals to me because I feel that I already have some of the key skills and experience been sought within in a large scale operating environment.</p>
 <p>The job is asking for + 7 years of experience in a similar role ideally banking. Strong customer management skills are also required for engagement with the customer.
 <p>They are seeking an applicant with large scale infrastructure project exposure with a key call been exposure to Agile run projects</p>
 Operational Management activities along with Operational Readiness is another key skill required.
 A passion for technology & innovation, service delivery experience and ITIL
 
 <p>I have some of the required experience and skills and plan to build on my Service Delivery role exposure.
-I have + 7 years of experience working for a large financial institution. I have 7 years of Operational and Governance exposure in a managed services environment. I establish good working relationships with my customers. I have the relevant ITIL qualifications and exposure in an ITIL driven environment (OSA Operational Support Analysis) which is a key requirement for the role itself.</p>
+I have + 7 years of experience working for a large financial institution and Operational Governance exposure in a managed services environment. I establish good working relationships with my customers. I have the relevant ITIL qualifications and exposure in an ITIL driven environment (OSA Operational Support Analysis) which is a key requirement for the role itself.</p>
 <p>In order for me to be successful in applying for a role such as this, I will need to obtain a bit more exposure to Service Delivery and large infrastructure deployments as I currently have experience in application related deployments. Infrastructure deployments can poise many challenges and it is critical that I gain that exposure to be successful in this role.</p>
 <p></p>
 <h3>My Personal Profile tests</h3>
 <h4>My results of an online Myers-Briggs test</h4> 
-
+ 
  
 <p> The result portrays me as having ESFJ Characteristics. We make up 9% of the population and below are of some of the traits:</p>
 <ul>
@@ -59,11 +64,11 @@ I have + 7 years of experience working for a large financial institution. I have
 
 
 <h4>The results of an online learning style test.</h4>
- 
+  
 
 <h4>The results of one further online IQ test of my choosing</h4>
 <a href="https://www.123test.com/iq-test/id=RW8MOSBMDL1B&version="> link to website</a> </p>
- 
+  
 
 <p>The results of the Myer-Briggs tests indicate i have the personality traits to be a valued member of a team.</p>
 
@@ -80,7 +85,7 @@ I would want to form a team with members whom have similar qualities specificall
 These new meters transmit wirelessly back to base and are more accurate on water usage than the traditional meters. (http://www.sydneywater.com.au/SW/accounts-billing/reading-your-meter/about-your-meter/digital-meters/index.htm)
 <p>Some of the challenges I do anticipate will be obtaining approval and endorsement from Sydney Water to share this data.
 Storing the data with relevant security standards is another challenge as this can be costly.<p/>
-<h4>Why is this Project Idea interesting and Useful</h4>
+<h4>Why is my project idea interesting and useful</h4>
 <p>As climate change triggers a variety on unexpected weather conditions, there is a distinct need for us to manage our resource usage more carefully as individuals.</p>
 <p>Drought seems to be more prevalent now than ever in in Australia. We are constantly been made aware to be diligent over our water usage on a daily basis however there is no smart platform to monitor for each individual household. I believe there an opportunity for a platform to be introduced which will help individuals monitor their water usage via a smart device. The projects statistics will focus on around Sydney at this point.</p>
 <p>Sydney has a population of about 5 million people. This is expected to grow to 5.3 million by 2031.
@@ -89,7 +94,7 @@ Storing the data with relevant security standards is another challenge as this c
 <h4>Features of the App</h4>
 <p>The app will be data centric and is to obtain a data feed from these remotely read meters from Sydney Water’s database with updates at minimum once a day to enable an accurate reading on your usage for the day via the app.</p>
 <p>This is would be the core feature of the app but other useful statistics can also be included over a period of time such as your consumption at the current rate over a period of time or how much water would you have used in say 10 years and other fun facts. My plan will be for the app to also tap into your water bills for saving goals on water and be rewards driven.</p>
-<h4> Software and Hardware require </h4>
+<h4> Software and Hardware required </h4>
 The development platform utilized will be Mobile together (Altova)
 The hosting platform I will use is also Altova (MobileTogether Server)
 The Development tools are free for this platform which will reduce costs overall
@@ -105,6 +110,7 @@ I will require a secure file transfer method and cloud hosting for the database 
 The software to design and build the app is free from Altova. We will need to pay for their cloud server and database hosting services.</p>
 <h4> Outcome and Impact the project if successful</h4>
 <p>Should this project be successful, we will be using technology as a means to preserve one of our most important resources for future generations to come.</p>
+<p>We all spend a considerable amount of screen time on our phones therefore, having this data conveniently available will prompt us to use the app.
 <p>People will also be empowered to view and compare their water usage as an accurate reading and on demand</p>
 
 
