--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,14 @@
 <img src="profilepic2.png" alt="Yash" style="width:100px;height:100px;">
 </p>
 <p>RMIT student number: S3824185</p>
-<p>Email address S3824185@student.rmit.edu.au</p>
-
+<p>
+Email address
+<a href="url">S3824185@student.rmit.edu.au</a>
+<p>
+My LinkedIn Profile: <a href="default.asp">
+<img src="linkedin.png" alt="My Profile" style="width:42px;height:42px;border:0">
+</a>
+</p>
 <p>My tertiary education consists of an A+ Support certificate, Diploma in Systems Technology (Spherion Education 2005), ITIL Foundations V3 and ITIL OSA certification. I have excellent written and communication skills.</p>
 My hobbies are camping and fishing with the family. I also do tend to watch the really important Manchester United soccer matches whenever time permits.
 <p>
@@ -67,7 +73,7 @@ I have + 7 years of experience working for a large financial institution and Ope
   
 
 <h4>The results of one further online IQ test of my choosing</h4>
-<a href="https://www.123test.com/iq-test/id=RW8MOSBMDL1B&version="> link to website</a> </p>
+<a href="https://www.123test.com/iq-test/id=RW8MOSBMDL1B&version="> link to IQ 123 website</a> </p>
   
 
 <p>The results of the Myer-Briggs tests indicate i have the personality traits to be a valued member of a team.</p>
@@ -92,22 +98,22 @@ Storing the data with relevant security standards is another challenge as this c
 <a href="https://www.sydneywater.com.au/SW/education/drinking-water/Water-use-conservation/index.htm"> Sydney water facts </a> </p>
 <p>As water restrictions get tougher, we need to be more realistic on water savings per household. Having an on demand platform showing you accurate usage per day will allow household to improve their own conservation methods. </p>
 <h4>Features of the App</h4>
-<p>The app will be data centric and is to obtain a data feed from these remotely read meters from Sydney Water’s database with updates at minimum once a day to enable an accurate reading on your usage for the day via the app.</p>
+<p>The app will be data centric and is to obtain a data feed from these remotely read meters from Sydney Water’s database with updates at minimum twice a day to enable an accurate reading on your usage for the day via the app.</p>
 <p>This is would be the core feature of the app but other useful statistics can also be included over a period of time such as your consumption at the current rate over a period of time or how much water would you have used in say 10 years and other fun facts. My plan will be for the app to also tap into your water bills for saving goals on water and be rewards driven.</p>
 <h4> Software and Hardware required </h4>
 The development platform utilized will be Mobile together (Altova)
 The hosting platform I will use is also Altova (MobileTogether Server)
 The Development tools are free for this platform which will reduce costs overall
-I will require a secure file transfer method and cloud hosting for the database along with encryption for the data. Cyber security controls will need to be designed to ensure data security.
+I will require a secure file transfer method and cloud hosting for the database along with encryption for the data. Cyber security controls will need to be incorporated into the solution to ensure data security.
 <h4>The skills required for my project, including software that needs to be written, and special hardware (if any). How feasible will it be to find the skills, software and hardware required? </h4>
 <h4>Key skills required</h3>
 <ul>
-  <li> an experienced mobile app developer </li>
-  <li> a Solution Architect to design the overall solution incorporating the relevant industry security standards.</li>
-  <li> a Project Manager to coordinate the build and delivery of the solution</li>
+  <li> An experienced mobile app developer </li>
+  <li> A Solution Architect to design the overall solution incorporating the relevant industry security standards.</li>
+  <li> A Project Manager to coordinate the build and delivery of the solution</li>
 </ul>
 <p>The above skills are relatively reasonable to source in today’s current market.
-The software to design and build the app is free from Altova. We will need to pay for their cloud server and database hosting services.</p>
+The software to design and build the app is free from Altova. We will need to factor in costs for their cloud server and database hosting services.</p>
 <h4> Outcome and Impact the project if successful</h4>
 <p>Should this project be successful, we will be using technology as a means to preserve one of our most important resources for future generations to come.</p>
 <p>We all spend a considerable amount of screen time on our phones therefore, having this data conveniently available will prompt us to use the app.
