--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@ My hobbies are camping and fishing with the family. I also do tend to watch the 
 <h3> My Ideal Job:</h3>
 
 <h4><a href="https://www.seek.com.au/job/40429621?tracking=TMC-SAU-eDM-SharedJob-13246"> Service Management Consultant- Infrastructure- Major Bank</a> </p> </h4>
- <img src="smc role.jpeg" alt="My Ideal Job" style="width:100px;height:100px;">
+ <img src="smc role.jpg" alt="My Ideal Job" style="width:500px;height:350px;">
  
 <p>My ideal job is a Service Management Consultant. This requires a strong background in Service Delivery Management and Governance skills on overseeing Infrastructure for a large financial institution. </p>
 <p>This role appeals to me because I feel that I already have some of the key skills and experience been sought within in a large scale operating environment.</p>
