--- a/index.htm
+++ b/index.htm
@@ -11,10 +11,6 @@
 <p>
 Email address
 <a href="url">S3824185@student.rmit.edu.au</a>
-<p>
-My LinkedIn Profile: <a href="default.asp">
-<img src="linkedin.png" alt="My Profile" style="width:42px;height:42px;border:0">
-</a>
 </p>
 <p>My tertiary education consists of an A+ Support certificate, Diploma in Systems Technology (Spherion Education 2005), ITIL Foundations V3 and ITIL OSA certification. I have excellent written and communication skills.</p>
 My hobbies are camping and fishing with the family. I also do tend to watch the really important Manchester United soccer matches whenever time permits.
@@ -44,7 +40,7 @@ My hobbies are camping and fishing with the family. I also do tend to watch the 
 
 <h4><a href="https://www.seek.com.au/job/40429621?tracking=TMC-SAU-eDM-SharedJob-13246"> Service Management Consultant- Infrastructure- Major Bank</a> </p> </h4>
 <p>
-<img src="SMC role.jpg" alt="My Ideal Job" style="width:500px;height:350px;">
+<img src="SMC role.jpg" alt="My Ideal Job" style="width:500px;height:500px;">
 </p>
 <p>My ideal job is a Service Management Consultant. This requires a strong background in Service Delivery Management and Governance skills on overseeing Infrastructure for a large financial institution. </p>
 <p>This role appeals to me because I feel that I already have some of the key skills and experience been sought within in a large scale operating environment.</p>
@@ -59,8 +55,9 @@ I have + 7 years of experience working for a large financial institution and Ope
 <p></p>
 <h3>My Personal Profile tests</h3>
 <h4>My results of an online Myers-Briggs test</h4> 
- 
- 
+<p>
+<img src="myersbriggs.png" alt="Personality Test" style="width:500px;height:500px;">
+</p>
 <p> The result portrays me as having ESFJ Characteristics. We make up 9% of the population and below are of some of the traits:</p>
 <ul>
   <li>Popular and outgoing</li>
@@ -71,8 +68,9 @@ I have + 7 years of experience working for a large financial institution and Ope
 
 
 <h4>The results of an online learning style test.</h4>
-  
-
+<p>
+<img src="iq.png" alt="Personality Test" style="width:500px;height:500px;">
+</p>
 <h4>The results of one further online IQ test of my choosing</h4>
 <a href="https://www.123test.com/iq-test/id=RW8MOSBMDL1B&version="> link to IQ 123 website</a> </p>
   
@@ -84,7 +82,8 @@ I have + 7 years of experience working for a large financial institution and Ope
 <p>My learning style indicates i am a visual learner however i do plan on using some of the recommendations such as writing down key words and instructions to complement my learning style</p>
 
 <p>The result I believe will influence my behavior in a team will be the personality test along with the IQ test.</p>
-<h4><I>Warm, Supportive and friendly are just what any team requires along with someone been thorough and consistent</I></h4>
+<p><i><h5 style="color:dodgerblue;">Warm, Supportive and friendly are just what any team requires along with someone been thorough and consistent.<h5> </i>
+</p>
 I would want to form a team with members whom have similar qualities specifically the personality traits as this will evade conflict
 <h3>My Project Idea</h3>
 <p>I have recently been searching for an app that can monitor my water usage at home in Sydney and there are none that I have come across thus far.</p>
